removing unneded things

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@ untitled.mtl
 load_obj.o
 test.o
 Entrega1.pdf
+DirtWeeds/GroundDirtWeedsPatchy004_AO_2K.jpg
+DirtWeeds/GroundDirtWeedsPatchy004_BUMP16_2K.tif
+DirtWeeds/GroundDirtWeedsPatchy004_BUMP_2K.jpg
+DirtWeeds/GroundDirtWeedsPatchy004_DISP16_2K.tif
+DirtWeeds/GroundDirtWeedsPatchy004_DISP_2K.jpg
+DirtWeeds/GroundDirtWeedsPatchy004_GLOSS_2K.jpg
+DirtWeeds/GroundDirtWeedsPatchy004_NRM_2K.jpg
+DirtWeeds/GroundDirtWeedsPatchy004_REFL_2K.jpg
+DirtWeeds/GroundDirtWeedsPatchy004_Sphere.png
